# dymos

./: .buildinfo  .bumpversion.toml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  genindex.html  index.html  installation.html  objects.inv  pixi.toml  pyproject.toml  release_notes.md  search.html  searchindex.js  zensical.toml
.claude/dev-docs/: openmdao-patterns.md  transcriptions.md
.claude/dev_docs/: zensical.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: dymos_docs_workflow.yml  dymos_tests_workflow.yml
_modules/: index.html
_modules/dymos/: run_problem.html
_modules/dymos/phase/: analytic_phase.html  phase.html
_modules/dymos/trajectory/: trajectory.html
api/: api.html  phase_api.html  run_problem.html  run_problem_function.html  trajectory_api.html  transcriptions_api.html
benchmark/: benchmark_brachistochrone.py  fast_birk_mat_benchmark.py
contributing/: contributing.html
contributing/reports/problem/: inputs.html  n2.html
docs/: _toc.yml  build_jupyter_book.py  build_source_docs.py  clean_notebooks.py  convert_to_markdown.py  references.bib  upload_doc_version.py
docs/api/: api.md  transcriptions_api.ipynb
docs/dymos_book/: _config.yml  _toc.yml  index.md
docs/dymos_book/_srcdocs/: index.ipynb
docs/dymos_book/api/: api.md
docs/dymos_book/contributing/: contributing.ipynb
docs/dymos_book/examples/: examples.md
docs/dymos_book/faq/: tandem_phases.ipynb
docs/dymos_book/features/: exploiting_sparsity.ipynb  features.md
docs/dymos_book/getting_started/: defining_odes.ipynb  getting_started.md
docs/markdown/api/: phase_api.md  run_problem_function.md  trajectory_api.md  transcriptions_api.md
docs/markdown/contributing/: contributing.md
docs/markdown/faq/: add_ode_output_to_timeseries.md  connect_scalar_parameters_to_ode.md  debugging.md  downstream_analysis.md  tandem_phases.md  upstream_analysis.md  use_partial_coloring.md
docs/markdown/features/: exploiting_sparsity.md  (+1 more)
docs/theory/: explicit_integration.ipynb  theory.md
dymos/: __init__.py  load_case.py  run_problem.py
dymos/examples/: __init__.py  plotting.py
dymos/grid_refinement/: __init__.py  error_estimation.py  grid_refinement_ode_system.py  refinement.py  write_iteration.py
dymos/jax/: README.md  __init__.py
dymos/models/: __init__.py
dymos/phase/: __init__.py  analytic_phase.py  options.py  phase.py  simulation_phase.py
dymos/specs/: __init__.py  base_spec.py  component_builders.py  connection_builders.py  constraint_spec.py  conversion.py  group_structure.py  instantiation.py  linkage_spec.py  objective_spec.py  phase_spec.py  registries.py  time_spec.py  trajectory_spec.py  transcription_spec.py  validation.py  variable_spec.py
dymos/test/: test_check_partials.py  test_load_case.py  test_options.py  test_run_problem.py
dymos/trajectory/: __init__.py  phase_linkage_comp.py  trajectory.py
dymos/transcriptions/: __init__.py  grid_data.py  transcription_base.py
dymos/utils/: __init__.py  birkhoff.py  cgl.py  constants.py  hermite.py  interpolate.py  introspection.py  lg.py  lgl.py  lgr.py  misc.py  ode_utils.py  testing_utils.py
dymos/visualization/: __init__.py  timeseries_plots.py
examples/: examples.html
examples/balanced_field/: balanced_field.html  balanced_field_funccomp.html
examples/brachistochrone/: brachistochrone.html  brachistochrone_tandem_phases.html  brachistochrone_upstream_controls.html  brachistochrone_upstream_init_duration_states.html  brachistochrone_upstream_states.html  plot.html
examples/bryson_denham/: anim.html  bryson_denham.html
examples/cannonball_implicit_duration/: cannonball_implicit_duration.html
examples/cart_pole/: cart_pole.html
examples/commercial_aircraft/: commercial_aircraft.html  driver_scaling_report.html
examples/double_integrator/: double_integrator.html
examples/finite_burn_orbit_raise/: finite_burn_orbit_raise.html
examples/hull/: hull_problem.html
examples/hypersensitive/: hypersensitive.html
examples/implicit_duration/: brachistochrone_implicit_duration.html
examples/length_constrained_brachistochrone/: length_constrained_brachistochrone.html
examples/min_time_climb/: min_time_climb.html
examples/moon_landing/: moon_landing.html
examples/mountain_car/: driver_scaling_report.html
examples/multi_phase_cannonball/: multi_phase_cannonball.html
examples/multibranch_trajectory/: multibranch_trajectory.html
examples/racecar/: racecar.html
examples/reentry/: reentry.html
examples/robertson_problem/: robertson_problem.html
examples/ssto_earth/: ssto_earth.html  total_coloring.html
examples/ssto_moon_linear_tangent/: ssto_moon_linear_tangent.html
examples/ssto_moon_polynomial_controls/: ssto_moon_polynomial_controls.html
examples/vanderpol/: vanderpol.html
examples/water_rocket/: water_rocket.html
faq/: add_ode_output_to_timeseries.html  connect_scalar_parameters_to_ode.html  debugging.html  downstream_analysis.html  faq.html  tandem_phases.html  upstream_analysis.html  use_partial_coloring.html
features/: exploiting_sparsity.html  plotting.html
features/phases/: analytic_phases.html  calc_expressions.html  constraints.html  objective.html  phases.html  phases_list.html  segments.html  timeseries.html  variables.html
features/trajectories/: trajectories.html
getting_started/: collocation.html  defining_odes.html  optimal_control.html  transcriptions.html
getting_started/intro_to_dymos/: intro_ivp.html  intro_segments.html
joss/: brachistochrone.py  paper.md
joss/flow_charts/: opt_control.py
joss/test/: test_brachistochrone_for_joss.py
om4_dymos/: options.py  phase.py  test_brach_serialization.py  test_deferrable_phase.py  test_dual_serialization.py  test_phase.py  test_radau_control_wiring.py  test_radau_new_time.py  test_radau_phase.py  test_radau_time_wiring.py  test_reactive_phase.py  test_unset_phase.py  transcription.py
om4_dymos/components/: control_interp_comp.py  test_control_interp.py  test_time_comp.py  time_comp.py
om4_dymos/transcriptions/: radau.py  radau_new.py
(+444 files in other folders)
