[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dymos"
dynamic = ["version"]
description = "Open-Source Optimization of Dynamic Multidisciplinary Systems"
readme = "readme.md"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "openmdao>=3.39.0",
    "scipy>=1.13", "pydantic>=2.12.5,<3",
]

[project.optional-dependencies]
all = [
    "dymos[docs]",
    "dymos[notebooks]",
    "dymos[test]",
    "dymos[numba]",
]
docs = [
    "bokeh",
    "ipython",
    "jax",
    "jaxlib",
    "jupyter",
    "jupyter-book<2",
    "matplotlib",
    "nbconvert",
    "notebook",
    "numpydoc>=1.1",
    "redbaron",
    "tabulate",
]
notebooks = [
    "ipython",
    "notebook",
    "tabulate",
]
test = [
    "pre-commit",
    "aiounittest",
    "matplotlib",
    "numpydoc>=1.1",
    "packaging",
    "playwright>=1.20",
    "pycodestyle",
    "testflo>=1.3.6",
]
numba = [
    "numba",
]

[project.entry-points.openmdao_report]
"dymos.linkage" = "dymos.visualization.linkage.report:_linkage_report_register"

[project.urls]
Homepage = "https://github.com/OpenMDAO/dymos"

[tool.hatch.version]
path = "dymos/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/dymos",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E226", "E241"]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 130

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (unused import) in api files.
"__init__.py" = ["F401"]
# Ignore import related conventions in docs
"**/dymos_book/**" = ["E402", "E501"]
# Ignore Test classifiers
"test_*.py" = ["D", "E", "F"]

###############################################
# Pixi Configuration
###############################################

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "=3.13"
numpy = ">=2.0"
scipy = ">=1.13"
pip = ">=25.3"
packaging = ">=25.0"
compilers = ">=1.8.0,<2"

[tool.pixi.pypi-dependencies]
om4 = { git = "https://github.com/openmdao/om4.git" }
dymos = { path = ".", editable = true }
jax = "*"

###############################################
# Pixi Features
###############################################

[tool.pixi.feature.docs.dependencies]
ipyparallel = "*"
jupyter-book = ">=1.0.3,<2"
matplotlib = "*"
numpydoc = "*"
jinja2 = "*"
tqdm = "*"

[tool.pixi.feature.notebooks.dependencies]
ipympl = "*"
notebook = "*"
ipython = "*"

[tool.pixi.feature.numba.dependencies]
numba = "*"

[tool.pixi.feature.packaging.dependencies]
hatchling = "*"

[tool.pixi.feature.test.dependencies]
pre-commit = "*"
aiounittest = "*"
numpydoc = "*"
parameterized = "*"
playwright = "*"
pycodestyle = "*"
pydocstyle = "*"
ruff = "*"
coverage = ">=7.6.0"

[tool.pixi.feature.test.pypi-dependencies]
testflo = "*"

[tool.pixi.feature.visualization.dependencies]
bokeh = "*"
matplotlib = "*"
rich = "*"

###############################################
# Pixi Environments
###############################################

[tool.pixi.environments]
default = { features = ["numba", "notebooks", "visualization", "test"], solve-group = "default" }
dev = { features = ["numba", "notebooks", "visualization", "test", "docs", "packaging"], solve-group = "default" }

###############################################
# Pixi Tasks
###############################################

[tool.pixi.tasks]
test = "testflo"
install-dymos-dev = { cmd = "pip install --no-deps -e . && pre-commit install", description = "Install Dymos in development mode" }
